Add varieties to productos sidebar

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -40,6 +40,10 @@
                         <li><a href="#">Eucalipto</a></li>
                         <li><a href="#">Algarrobo</a></li>
                         <li><a href="#">Citrus</a></li>
+                        <li><a href="#">Romero</a></li>
+                        <li><a href="#">Tomillo</a></li>
+                        <li><a href="#">Romero</a></li>
+                        <li><a href="#">Tilo</a></li>
                     </ul>
                 </li>
                 <li>Producto
