--- a/index.html
+++ b/index.html
@@ -12,20 +12,39 @@
 </head>
 <body>
     <!-- Header (logo + barra de navegacion) -->
-    <header> 
-        <a href="index.html"><img class="logo" src="public/logo-final.png" alt="Logo de la empresa."></a>
-        <!-- Barra de navegacion -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/conocenos.html">Conocenos</a></li>
-                <li><a href="pages/productos.html">Productos</a></li>
-                <li><a href="pages/servicios.html">Servicios</a></li>
-                <li><a href="pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <div class="container">
+                <!-- Logo -->
+                <a class="navbar-brand" href="index.html" ><img id="logo" src="public/logo-final.png" alt="Logo empresa"></a>
+                <!-- Hamburguer Menu -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- Navbar -->
+                <div class="collapse navbar-collapse text-uppercase" id="navbarNav">
+                    <ul class="navbar-nav text-center ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/conocenos.html">Conocenos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav> 
     </header>
-    <!-- Main section. Descripcion de la pagina + Productos Destacados + Seccion extra -->
+    
     <main class="index_main">
         <!-- Hero Section -->
         <section class="heroSection">
