Change form to Bootstrap

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,9 +63,30 @@
                     <li>Domingo: Cerrado</li>
                 </ul>
         </section>
-        <section class="formulario">
-            <h2>Contacto</h2> 
-            <form action="">
+        <section class="formulario container">
+            <form class="bg-dark text-light p-3 mt-5 rounded">
+                <h2>Contacto</h2>
+                <div>
+                    <label for="" class="form-label">Email</label>
+                    <input type="email" class="form-control">
+                </div>
+                <div>
+                    <label for="" class="form-label">Telefono</label>
+                    <input type="number" class="form-control">
+                </div>
+                <div>
+                    <label for="" class="form-label">Tu consulta no molesta!</label>
+                    <textarea class="form-control" rows="3"></textarea>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="subscribe">
+                    <label class="form-check-label" for="subscribe">Subscribirme al Newsletter</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+
+            
+            <!-- <form action="">
                 <div>
                     <label for="">Email</label> <br>
                     <input class="inputText" type="text">
@@ -79,7 +100,7 @@
                     <textarea class="inputText" name="" id="" cols="30" rows="10"></textarea>
                 </div>
                 <input class="button" type="button" value="Enviar">
-            </form>
+            </form> -->
         </section>
         <iframe class="googleMap" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2024.8140348847041!2d-64.18469861054419!3d-31.405371068045167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sar!4v1649367148693!5m2!1sen!2sar" width="300" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
