--- a/index.html
+++ b/index.html
@@ -47,14 +47,16 @@
     
     <main class="index_main">
         <!-- Hero Section -->
-        <section class="heroSection">
-            <div class="heroSection--txt">
-                <h1>Mieles Lupita</h1>
-                <h2>Miel Natural de Abejas</h2>
-                <p class="texto">Encontra toda la variedad de productos de calidad que necesitas en nuestra tienda online. Tambien ofrecemos servicios de primer nivel para tu emprendimiento y nos aseguramos que recibas atencion personalizada en todo momento.</p>
-            </div>
-            <div class="heroSection--img">
-                <img  src="public/apicultor.jpg" alt="Imagen de un apicultor.">
+        <section class="heroSection container mt-3">
+            <div class="row">
+                <div class="heroSection--txt col-xs-12 col-md-4 rounded">
+                    <h1>Mieles Lupita</h1>
+                    <h2>Miel Natural de Abejas</h2>
+                    <p>Encontra toda la variedad de productos de calidad que necesitas en nuestra tienda online. Tambien ofrecemos servicios de primer nivel para tu emprendimiento y nos aseguramos que recibas atencion personalizada en todo momento.</p>
+                </div>
+                <div class="heroSection--img col-xs-12 col-md-8">
+                    <img  src="public/apicultor.jpg" alt="Imagen de un apicultor.">
+                </div>
             </div>
 
         </section>
