Cards with Bootstrap

--- a/index.html
+++ b/index.html
@@ -61,47 +61,34 @@
 
         </section>
         <!-- Productos Destacados Seccion -->
-        <section class="destacados">
-            <h2>Productos DESTACADOS</h2>
-            <!-- Grid con Productos Destacados -->
-            <div class="destacados--grid">
-                <article class="card">
-                    <div class="card--text">
-                        Miel de Eucalipto.
+        <section class="container destacados pt-3">
+            <h2>Productos Destacados</h2>
+            <div class="row g-3 text-center justify-content-center">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card align-items-center">
+                        <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de Miel de Eucalipto.">
+                        <h5 class="card-title">Miel de Eucalipto</h5>
+                        <a href="#" class="btn btn-primary">$</a>
                     </div>
-                    <div class="card--img">
-                        <img src="public/miel_eucaliptus.jpg" alt="Imagen de miel de eucalipto.">
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card align-items-center">
+                        <img class="card-img-top " src="public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo."">
+                        <h5 class="card-title">Miel de Algarrobo</h5>
+                        <a href="#" class="btn btn-primary">$</a>
                     </div>
-                    <div class="card--precio">
-                        $99.99
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card align-items-center">
+                        <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
+                        <h5 class="card-title">Miel de Citrus</h5>
+                        <a href="#" class="btn btn-primary">$</a>
                     </div>
-                </article>
-                <article class="card">
-                    <div class="card--text">
-                        Miel de Algarrobo.
-                    </div>
-                    <div class="card--img">
-                        <img src="public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo.">
-                    </div>
-                    <div class="card--precio">
-                        $99.99
-                    </div>
-                </article>
-                <article class="card">
-                    <div class="card--text">
-                        Miel de Citrus.
-                    </div>
-                    <div class="card--img">
-                        <img src="public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
-                    </div>
-                    <div class="card--precio">
-                        $99.99
-                    </div>
-                </article>
+                </div>
             </div>
         </section>
         <!-- Seccion extra, contenido variado -->
-        <section class="seccionExtra"> 
+        <section class="seccionExtra pt-3"> 
             <div class="seccionExtra--descripcion">
                 <h2>Receta del mes:</h2>
                 <p>Ensalada de mandarina con naranja, miel y hojas de menta.</p>
