--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -50,41 +50,34 @@
             <h2>Servicios</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut illo porro, saepe quidem velit obcaecati qui voluptates hic voluptatum quas voluptate vel atque ullam architecto, perferendis impedit autem necessitatibus id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel harum voluptatibus delectus repudiandae nisi aperiam architecto reprehenderit numquam asperiores fuga, non sequi, libero eaque adipisci sed facere quis nesciunt aspernatur.</p>
         </section>
-        <!-- Grid con Servicios -->
-        <section class="servicios--grid">
-            <article class="card">
-                <div class="card--text">
-                    Envasado
+        <!-- Grid con Servicios Bootstrap -->
+        <section class="container">
+            <div class="row g-3 text-center justify-content-center">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card align-items-center">
+                        <img src="../public/envasado.png" alt="Imagen de envasado" class="card-img-top">
+                        <h5 class="card-tittle">Envasado</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex similique neque consequuntur id ad optio quis aperiam.</p>
+                        <a href="#" class="btn btn-primary">$</a>
+                    </div>
                 </div>
-                <div class="card--img">
-                    <img src="../public/envasado.png" alt="Imagen envasado de miel.">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card align-items-center">
+                        <img src="../public/apicultor_clase.jpg" alt="Imagen de envasado" class="card-img-top">
+                        <h5 class="card-tittle">Tutorias</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex similique neque consequuntur id ad optio quis aperiam.</p>
+                        <a href="#" class="btn btn-primary">$</a>
+                    </div>
                 </div>
-                <div class="card--precio">
-                    $99.99
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card align-items-center">
+                        <img src="../public/trasladocolmena.jpg" alt="Imagen de envasado" class="card-img-top">
+                        <h5 class="card-tittle">Traslado de Colmenas</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex similique neque consequuntur id ad optio quis aperiam.</p>
+                        <a href="#" class="btn btn-primary">$</a>
+                    </div>
                 </div>
-            </article>
-            <article class="card">
-                <div class="card--text">
-                    Tutorias
-                </div>
-                <div class="card--img">
-                    <img src="../public/apicultor_clase.jpg" alt="Imagen de tutor de apicultor">
-                </div>
-                <div class="card--precio">
-                    $99.99
-                </div>
-            </article>
-            <article class="card">
-                <div class="card--text">
-                    Traslado de Colmenas
-                </div>
-                <div class="card--img">
-                    <img src="../public/trasladocolmena.jpg" alt="Imagen de colmenas en un camion">
-                </div>
-                <div class="card--precio">
-                    $99.99
-                </div>
-            </article>
+            </div>
         </section>
     </main>
     
