--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -50,14 +50,48 @@
             <div class="parallax imgBackgroundOne">
                 <h2 class="textoSobreImagen">Conocenos</h2>
             </div>
-            <p class="texto textoConocenos">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, iure nostrum tempore debitis minima ab distinctio illum repellat laudantium quas, nihil repellendus dignissimos veritatis harum incidunt, optio enim porro placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident illum corporis adipisci unde, perspiciatis error, delectus at non reiciendis quibusdam maiores quae perferendis? Vitae molestias tempora eos deserunt eius ea. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta perferendis ipsum consequatur ipsa, impedit amet quasi accusantium voluptate nemo voluptatem deleniti reiciendis quia magni deserunt ad officiis illo, expedita et? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis in, natus temporibus laboriosam dolore officiis ullam ex rerum officia doloremque maxime, aliquam id corrupti fuga eligendi praesentium alias voluptatum voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero perspiciatis nobis quidem voluptatem nisi ipsum possimus nihil minima, minus voluptate excepturi ratione delectus quo facere unde magni et aspernatur reprehenderit.</p>
+            <p class="texto textoConocenos">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, iure nostrum tempore debitis minima ab distinctio illum repellat laudantium quas, nihil repellendus dignissimos veritatis harum incidunt, optio enim porro placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident illum corporis adipisci unde, perspiciatis error, delectus at non reiciendis quibusdam maiores quae perferendis? Vitae molestias tempora eos deserunt eius ea. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta perferendis ipsum consequatur ipsa, impedit amet quasi accusantium voluptate nemo voluptatem.</p>
         </section>
+        <section class="comunidadesAmigas d-flex justify-content-center">
+            <!-- Offcanvas Menu -->
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas" aria-labelledby="offCanvasLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title">
+                        Comunidades Amigas:
+                    </h5>
+                </div>
+            </div>
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#comunidadesAmigas" aria-controls="offcanvasExample">Conoce nuestras comunidades amigas</button>
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="comunidadesAmigas" aria-labelledby="offcanvasComunidadesAmigasLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasComunidadesAmigasLabel">Comunidades Amigas</h5>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum vero expedita quos voluptas praesentium vel! Eos repellendus.</div>
+                        <ul class="nav flex-column ">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark"href="#">Abejas Argentinas</a>
+                                <img src="../public/comunidad1.jpeg" alt="Logo comunidad Abejas Argentinas.">
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="#">Comida y Salud</a>
+                                <img src="../public/comunidad2.jpeg" alt="Logo comunidad comida y salud.">
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="#">Comunidad Nature</a>
+                                <img src="../public/comunidad3.jpeg" alt="Logo comunidad Nature.">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
         <section class="premios">   
             <div class="parallax imgBackgroundTwo">
                 <h2 class="textoSobreImagen">Premios y Reconocimientos</h2>
             </div>
             <div class="texto textoPremios">
-                <p class="texto textoPremios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias hic unde nulla, eaque voluptates officiis at facere, adipisci exercitationem asperiores blanditiis illum consequatur libero iusto ducimus, explicabo sapiente deserunt omnis. Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <p class="texto textoPremios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias hic unde nulla, eaque voluptates officiis at facere, adipisci exercitationem asperiores blanditiis illum consequatur.</p>
                 <h4>Premios:</h4>
                 <ul class="texto listaPremios">
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
@@ -66,8 +100,8 @@
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
                 </ul>
             </div>
-
         </section>
+
     </main>
     <footer>
         <p class="texto">Copyright © 2022 Mieles Lupita</p>
