Change buttons color

--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -61,7 +61,7 @@
                     </h5>
                 </div>
             </div>
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#comunidadesAmigas" aria-controls="offcanvasExample">Conoce nuestras comunidades amigas</button>
+                <button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#comunidadesAmigas" aria-controls="offcanvasExample">Conoce nuestras comunidades amigas</button>
                 <div class="offcanvas offcanvas-start" tabindex="-1" id="comunidadesAmigas" aria-labelledby="offcanvasComunidadesAmigasLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasComunidadesAmigasLabel">Comunidades Amigas</h5>
