--- a/pages/productos.html
+++ b/pages/productos.html
@@ -83,42 +83,42 @@
                     <div class="card align-items-center">
                         <img class="card-img-top" src="../public/miel_eucaliptus.jpg" alt="Imagen de Miel de Eucalipto.">
                         <h5 class="card-title">Miel de Eucalipto</h5>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="card align-items-center">
                         <img class="card-img-top" src="../public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo."">
                         <h5 class="card-title">Miel de Algarrobo</h5>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="card align-items-center">
                         <img class="card-img-top" src="../public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
                         <h5 class="card-title">Miel de Citrus</h5>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="card align-items-center">
                         <img class="card-img-top" src="../public/miel_algarrobo.jpg" alt="Imagen de miel de girasol.">
                         <h5 class="card-title">Miel de Girasol</h5>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="card align-items-center">
                         <img class="card-img-top" src="../public/polen.jpg" alt="Imagen de polen de abejas.">
                         <h5 class="card-title">Polen de Abeja</h5>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="card align-items-center">
                         <img class="card-img-top" src="../public/propoleo.jpg" alt="Imagen de propoleo.">
                         <h5 class="card-title">Propoleo</h5>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
             </div>
