--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -58,7 +58,7 @@
                         <img src="../public/envasado.png" alt="Imagen de envasado" class="card-img-top">
                         <h5 class="card-tittle">Envasado</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex similique neque consequuntur id ad optio quis aperiam.</p>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
@@ -66,7 +66,7 @@
                         <img src="../public/apicultor_clase.jpg" alt="Imagen de envasado" class="card-img-top">
                         <h5 class="card-tittle">Tutorias</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex similique neque consequuntur id ad optio quis aperiam.</p>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
@@ -74,7 +74,7 @@
                         <img src="../public/trasladocolmena.jpg" alt="Imagen de envasado" class="card-img-top">
                         <h5 class="card-tittle">Traslado de Colmenas</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex similique neque consequuntur id ad optio quis aperiam.</p>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
             </div>
