--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
                     <div class="card align-items-center">
                         <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de Miel de Eucalipto.">
                         <h5 class="card-title">Miel de Eucalipto</h5>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="card align-items-center">
                         <img class="card-img-top " src="public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo."">
                         <h5 class="card-title">Miel de Algarrobo</h5>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="card align-items-center">
                         <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
                         <h5 class="card-title">Miel de Citrus</h5>
-                        <a href="#" class="btn btn-primary">$</a>
+                        <a href="#" class="btn btn-warning">$</a>
                     </div>
                 </div>
             </div>
