--- a/index.html
+++ b/index.html
@@ -63,26 +63,26 @@
         <!-- Productos Destacados Seccion -->
         <section class="container destacados pt-3">
             <h2>Productos Destacados</h2>
-            <div class="row g-3 text-center justify-content-center">
-                <div class="col-12 col-md-6 col-lg-3">
+            <div class="row g-3 row-cols-auto justify-content-center">
+                <div class="col">
                     <div class="card align-items-center">
-                        <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de Miel de Eucalipto.">
                         <h5 class="card-title">Miel de Eucalipto</h5>
-                        <a href="#" class="btn btn-warning">$</a>
+                        <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de Miel de Eucalipto.">
+                        <a href="#" class="btn btn-primary">$</a>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col">
                     <div class="card align-items-center">
-                        <img class="card-img-top " src="public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo."">
                         <h5 class="card-title">Miel de Algarrobo</h5>
-                        <a href="#" class="btn btn-warning">$</a>
+                        <img class="card-img-top " src="public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo."">
+                        <a href="#" class="btn btn-primary">$</a>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col">
                     <div class="card align-items-center">
-                        <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
                         <h5 class="card-title">Miel de Citrus</h5>
-                        <a href="#" class="btn btn-warning">$</a>
+                        <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
+                        <a href="#" class="btn btn-primary">$</a>
                     </div>
                 </div>
             </div>
