--- a/pages/productos.html
+++ b/pages/productos.html
@@ -78,6 +78,7 @@
         </section>
         <!-- Grid Productos Bootstrap -->
         <section class="container-fluid">
+            <h2 class="text-center">Productos</h2>
             <div class="row g-3 row-cols-auto justify-content-center"> 
                 <div class="col">
                     <div class="card align-items-center">
