Form con floating labels

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,17 +66,17 @@
         <section class="formulario container">
             <form class="bg-dark text-light p-3 mt-5 rounded">
                 <h2>Contacto</h2>
-                <div>
-                    <label for="" class="form-label">Email</label>
-                    <input type="email" class="form-control">
+                <div class="form-floating text-dark mb-4">
+                    <input type="email" class="form-control" placeholder="@">
+                    <label for="floatingInput">Email</label>
                 </div>
-                <div>
-                    <label for="" class="form-label">Telefono</label>
-                    <input type="number" class="form-control">
+                <div class="form-floating text-dark mb-4">
+                    <input type="number" class="form-control" placeholder="+54_____">
+                    <label for="floatingPassword">Telefono</label>
                 </div>
-                <div>
-                    <label for="" class="form-label">Tu consulta no molesta!</label>
-                    <textarea class="form-control" rows="3"></textarea>
+                <div class="form-floating text-dark mb-4">
+                    <textarea class="form-control" placeholder="Deja un comentario" style="height: 150px"></textarea>
+                    <label for="floatingTextarea">Tu consulta no molesta!</label>
                 </div>
                 <div class="form-check">
                     <input type="checkbox" class="form-check-input" id="subscribe">
@@ -85,22 +85,7 @@
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
 
-            
-            <!-- <form action="">
-                <div>
-                    <label for="">Email</label> <br>
-                    <input class="inputText" type="text">
-                </div>
-                <div>
-                    <label for="">Telefono</label> <br>
-                    <input class="inputText" type="text">
-                </div>
-                <div>
-                    <label for="">Consultanos o realiza tu pedido!</label> <br>
-                    <textarea class="inputText" name="" id="" cols="30" rows="10"></textarea>
-                </div>
-                <input class="button" type="button" value="Enviar">
-            </form> -->
+
         </section>
         <iframe class="googleMap" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2024.8140348847041!2d-64.18469861054419!3d-31.405371068045167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sar!4v1649367148693!5m2!1sen!2sar" width="300" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
