--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             
         </section>
         <!-- Newsletter Section -->
-        <form class="newsletter container" action="">
-            <div class="container-fluid d-flex flex-column">
+        <form class="newsletter container text-center bg-dark text-light rounded" action="">
+            <div class="container-fluid d-flex flex-column align-items-center">
                 <h5 class="">Subscribete para recibir ofertas y novedades</h5>
                 <div class="form-floating text-dark mb-4 d-flex flex-row">
                     <input type="email" class="form-control" placeholder="@">
