Show grid borders

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
         </section>
         <!-- Negocios & Testimonios -->
-        <section class="negocios container">
+        <section class="negocios">
             <h1>ASD</h1>
             <div id="carouselNegocios" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -103,7 +103,7 @@
         </section>
 
         <!-- Testimonios -->
-        <section class="testimonios container">
+        <section class="testimonios">
             <h1>ASD</h1>
             <!-- <div id="carouselTestimonios" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
