Fix carousel grid areas glitch

--- a/index.html
+++ b/index.html
@@ -89,33 +89,41 @@
         </section>
         <!-- Negocios & Testimonios -->
         <section class="negocios">
-            <h1>ASD</h1>
-            <div id="carouselNegocios" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="1000">
-                        <img src="public/empresas.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="public/empresas.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Testimonios -->
-        <section class="testimonios">
-            <h1>ASD</h1>
-            <!-- <div id="carouselTestimonios" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselNegocios" class="carousel slide negocios" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="2000">
                         <img src="public/empresas.png" class="d-block w-100" alt="">
                     </div>
-                    <div class="carousel-item" data-bs-interval="500">
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="public/empresas.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
                         <img src="public/empresas.png" class="d-block w-100" alt="">
                     </div>
                 </div>
-            </div> -->
+            </div>
         </section>
+        <!-- Testimonios -->
+        <section class="testimonios">
+        <div id="carouselTestimonios" class="carousel slide testimonios" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="2000">
+                    <img src="public/empresas.png" class="d-block w-100" alt="">
+                </div>
+                <div class="carousel-item" data-bs-interval="500">
+                    <img src="public/empresas.png" class="d-block w-100" alt="">
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="public/empresas.png" class="d-block w-100" alt="">
+                </div>
+            </div>
+        </div>
+        </section>
+
+
+
+
+
         <!-- Newsletter Section Luego sera colocada en el footer-->
         <!-- <form class="newsletter container text-center bg-dark text-light rounded" action="">
             <div class="container-fluid d-flex flex-column align-items-center">
