--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
                 </div>
             </div>
         </section>
+        <!-- Newsletter Section Luego sera colocada en el footer-->
+        <form class="newsletter container text-center bg-dark text-light rounded" action="">
+            <div class="container-fluid d-flex flex-column align-items-center">
+                <h5 class="">Subscribete para recibir ofertas y novedades</h5>
+                <div class="form-floating text-dark mb-4 d-flex flex-row">
+                    <input type="email" class="form-control" placeholder="@">
+                    <label for="floatingInput">Email</label>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </div>
+                
+            </div>
+        </form>
         <!-- Negocios & Testimonios -->
         <section class="negocios">
             <div id="carouselNegocios" class="carousel slide negocios" data-bs-ride="carousel">
@@ -124,18 +136,7 @@
 
 
 
-        <!-- Newsletter Section Luego sera colocada en el footer-->
-        <!-- <form class="newsletter container text-center bg-dark text-light rounded" action="">
-            <div class="container-fluid d-flex flex-column align-items-center">
-                <h5 class="">Subscribete para recibir ofertas y novedades</h5>
-                <div class="form-floating text-dark mb-4 d-flex flex-row">
-                    <input type="email" class="form-control" placeholder="@">
-                    <label for="floatingInput">Email</label>
-                    <button type="submit" class="btn btn-primary">Enviar</button>
-                </div>
-                
-            </div>
-        </form> -->
+
     </main>
     <!-- Footer. Redes sociales . -->
     <footer> 
