--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 </div>
             </div>
         </section>
-        <!-- Newsletter Section Luego sera colocada en el footer-->
-        <form class="newsletter container text-center bg-dark text-light rounded" action="">
+        <!-- Newsletter-->
+        <form class="newsletter container text-center" action="">
             <div class="container-fluid d-flex flex-column align-items-center">
                 <h5 class="">Subscribete para recibir ofertas y novedades</h5>
                 <div class="form-floating text-dark mb-4 d-flex flex-row">
@@ -99,7 +99,7 @@
                 
             </div>
         </form>
-        <!-- Negocios & Testimonios -->
+        <!-- Negocios donde encontrar. Proveedores. -->
         <section class="negocios">
             <div id="carouselNegocios" class="carousel slide negocios" data-bs-ride="carousel">
                 <div class="carousel-inner">
