Add negocios and proveedores

--- a/index.html
+++ b/index.html
@@ -101,16 +101,19 @@
         </form>
         <!-- Negocios donde encontrar. Proveedores. -->
         <section class="negocios">
-            <div id="carouselNegocios" class="carousel slide negocios" data-bs-ride="carousel">
+            <div id="carouselNegocios" class="carousel-dark slide negocios" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="2000">
                         <img src="public/empresas.png" class="d-block w-100" alt="">
+                        <div class="carousel-caption d-md-block">
+                            <h5>Donde encontrarnos:</h5>
+                        </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <img src="public/empresas.png" class="d-block w-100" alt="">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="public/empresas.png" class="d-block w-100" alt="">
+                        <img src="public/proveedores.png" class="d-block w-100" alt="">
+                        <div class="carousel-caption d-md-block">
+                            <h5>Nuestros clientes:</h5>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -123,6 +126,9 @@
                     <img src="public/empresas.png" class="d-block w-100" alt="">
                 </div>
                 <div class="carousel-item" data-bs-interval="500">
+                    <img src="public/empresas.png" class="d-block w-100" alt="">
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="public/empresas.png" class="d-block w-100" alt="">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
