Add iframe tutorias

--- a/index.html
+++ b/index.html
@@ -99,9 +99,16 @@
                 
             </div>
         </form>
-        <!-- Negocios donde encontrar. Proveedores. -->
+        <!-- Clases apicultura -->
+        <section class="tutorias">
+            <div class="container">
+                <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/apCLQgCqeec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+        </section>
+        <!-- Negocios donde encontrarnos. Proveedores. -->
         <section class="negocios">
-            <div id="carouselNegocios" class="carousel-dark slide negocios" data-bs-ride="carousel">
+            <div id="carouselNegocios" class="carousel-dark slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="2000">
                         <img src="public/empresas.png" class="d-block w-100" alt="">
@@ -118,31 +125,6 @@
                 </div>
             </div>
         </section>
-        <!-- Testimonios -->
-        <section class="testimonios">
-        <div id="carouselTestimonios" class="carousel slide testimonios" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="2000">
-                    <img src="public/empresas.png" class="d-block w-100" alt="">
-                </div>
-                <div class="carousel-item" data-bs-interval="500">
-                    <img src="public/empresas.png" class="d-block w-100" alt="">
-                </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="public/empresas.png" class="d-block w-100" alt="">
-                </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="public/empresas.png" class="d-block w-100" alt="">
-                </div>
-            </div>
-        </div>
-        </section>
-
-
-
-
-
-
     </main>
     <!-- Footer. Redes sociales . -->
     <footer> 
