--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- My CSS -->
     <link rel="stylesheet" href="main.css">
     <title>Mieles Lupita</title>
@@ -129,11 +131,37 @@
             </section>
         </main>
         <!-- Footer. Redes sociales . -->
-        <footer class="footer"> 
-            <p class="texto">Copyright &copy; 2022 Mieles Lupita</p>
-            <div class="rrssLinks">
-                <a  href="https://www.facebook.com/" target="_blank"><img class="socialLogo" src="public/logo_facebook.png" alt=""></a>
-                <a  href="https://www.instagram.com/" target="_blank"><img class="socialLogo" src="public/logo_instagram.png" alt=""></a>
+        <footer class="footer bg-dark text-white pt-2 mt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 text-left">
+                        <h5 class="text-uppercase font-weight-bold text-warning">Links Utiles</h5>
+                        <ul>
+                            <li>Delivery</li>
+                            <li>Devoluciones</li>
+                            <li>Login</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <h5 class="text-uppercase font-weight-bold text-warning">Contacto</h5>
+                        <ul>
+                            <li><i class="bi bi-house-door"></i>Avenida San Lorenzo 1234, Cordoba, Argentina</li>
+                            <li><i class="bi bi-telephone-fill"></i>+54 0303 222222</li>
+                            <li><i class="bi bi-envelope"></i>mieleslupita@gmail.com</li>
+                            <li>
+                                <div class="rrss">
+                                    <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
+                                    <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <h5>Copyright &copy; 2022 Mieles Lupita</h5>
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
