Reworked footer all pages

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -127,11 +127,38 @@
         </section>
     </main>
     
-    <footer>
-        <p class="texto">Copyright © 2022 Mieles Lupita</p>
-        <div class="rrssLinks">
-            <a  href="https://www.facebook.com/" target="_blank"><img class="socialLogo" src="../public/logo_facebook.png" alt=""></a>
-            <a  href="https://www.instagram.com/" target="_blank"><img class="socialLogo" src="../public/logo_instagram.png" alt=""></a>
+    <!-- Footer-->
+    <footer class="footer bg-dark text-white pt-2 mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 text-left">
+                    <h5 class="text-uppercase font-weight-bold text-warning">Links Utiles</h5>
+                    <ul class="text-white">
+                        <li> <a href="#">Delivery</a></li>
+                        <li><a href="#">Devoluciones</a></li>
+                        <li><a href="#">Login</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-6">
+                    <h5 class="text-uppercase font-weight-bold text-warning">Contacto</h5>
+                    <ul>
+                        <li><i class="bi bi-house-door"></i>Avenida San Lorenzo 1234, Cordoba, Argentina</li>
+                        <li><i class="bi bi-telephone-fill"></i>+54 0303 222222</li>
+                        <li><i class="bi bi-envelope"></i>mieleslupita@gmail.com</li>
+                        <li>
+                            <div class="rrss">
+                                <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
+                                <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h5>Copyright &copy; 2022 Mieles Lupita</h5>
+                </div>
+            </div>
         </div>
     </footer>
     <!-- Bootstrap JS -->
