--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
                 <div class="tutorias-video">
                     <iframe src="https://www.youtube.com/embed/apCLQgCqeec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-
             </section>
             <!-- Negocios donde encontrarnos. Proveedores. -->
             <section class="negocios">
@@ -130,16 +129,16 @@
                 </div>
             </section>
         </main>
-        <!-- Footer. Redes sociales . -->
+        <!-- Footer-->
         <footer class="footer bg-dark text-white pt-2 mt-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 text-left">
                         <h5 class="text-uppercase font-weight-bold text-warning">Links Utiles</h5>
-                        <ul>
-                            <li>Delivery</li>
-                            <li>Devoluciones</li>
-                            <li>Login</li>
+                        <ul class="text-white">
+                            <li> <a href="#">Delivery</a></li>
+                            <li><a href="#">Devoluciones</a></li>
+                            <li><a href="#">Login</a></li>
                         </ul>
                     </div>
                     <div class="col-12 col-md-6">
