--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -89,11 +89,39 @@
         </section>
         <iframe class="googleMap" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2024.8140348847041!2d-64.18469861054419!3d-31.405371068045167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sar!4v1649367148693!5m2!1sen!2sar" width="300" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
-    <footer>
-        <p class="texto">Copyright © 2022 Mieles Lupita</p>
-        <div class="rrssLinks">
-            <a  href="https://www.facebook.com/" target="_blank"><img class="socialLogo" src="../public/logo_facebook.png" alt=""></a>
-            <a  href="https://www.instagram.com/" target="_blank"><img class="socialLogo" src="../public/logo_instagram.png" alt=""></a>
+
+    <!-- Footer-->
+    <footer class="footer bg-dark text-white pt-2 mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 text-left">
+                    <h5 class="text-uppercase font-weight-bold text-warning">Links Utiles</h5>
+                    <ul class="text-white">
+                        <li> <a href="#">Delivery</a></li>
+                        <li><a href="#">Devoluciones</a></li>
+                        <li><a href="#">Login</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-6">
+                    <h5 class="text-uppercase font-weight-bold text-warning">Contacto</h5>
+                    <ul>
+                        <li><i class="bi bi-house-door"></i>Avenida San Lorenzo 1234, Cordoba, Argentina</li>
+                        <li><i class="bi bi-telephone-fill"></i>+54 0303 222222</li>
+                        <li><i class="bi bi-envelope"></i>mieleslupita@gmail.com</li>
+                        <li>
+                            <div class="rrss">
+                                <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
+                                <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h5>Copyright &copy; 2022 Mieles Lupita</h5>
+                </div>
+            </div>
         </div>
     </footer>
     <!-- Bootstrap JS -->
