--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -89,7 +89,10 @@
 
 
         </section>
-        <iframe class="googleMap" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2024.8140348847041!2d-64.18469861054419!3d-31.405371068045167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sar!4v1649367148693!5m2!1sen!2sar" width="300" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="ratio ratio-16x9 googleMap">
+            <iframe class="" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2024.8140348847041!2d-64.18469861054419!3d-31.405371068045167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sar!4v1649367148693!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+
     </main>
 
     <!-- Footer-->
