Add testimonios bootstrap

--- a/index.html
+++ b/index.html
@@ -108,14 +108,10 @@
                 <div class="ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/apCLQgCqeec" title="YouTube video" allowfullscreen></iframe>
                 </div>
-                
-                <!-- <div class="tutorias-video">
-                    <iframe src="https://www.youtube.com/embed/apCLQgCqeec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div> -->
             </section>
             <!-- Negocios donde encontrarnos. Proveedores. -->
             <section class="negocios">
-                <div id="carouselNegocios" class="carousel-dark slide" data-bs-ride="carousel">
+                <div id="carouselNegocios" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="2000">
                             <img src="public/empresas.png" class="d-block w-100" alt="">
@@ -132,7 +128,62 @@
                     </div>
                 </div>
             </section>
+            <section class="testimonios mt-5">
+                <h5 class="text-center">Testimonios</h5>
+    
+                <div id="carouselTestimonios" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="10000">
+                            <div class="item">
+                                <div class="item-img">
+                                    <img src="public/testimonio-a.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="item-txt">
+                                    <h5>Cliente Uno</h5>
+                                    <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi rerum ratione ad, eaque doloremque ut dolorem hic consequatur placeat rem quis possimus nisi dolores saepe iusto tempora harum tenetur et?</blockquote>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="10000">
+                            <div class="item">
+                                <div class="item-img">
+                                    <img src="public/testimonio-b.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="item-txt">
+                                    <h5>Cliente Uno</h5>
+                                    <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi rerum ratione ad, eaque doloremque ut dolorem hic consequatur placeat rem quis possimus nisi dolores saepe iusto tempora harum tenetur et?</blockquote>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="10000">
+                            <div class="item">
+                                <div class="item-img">
+                                    <img src="public/testimonio-c.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="item-txt">
+                                    <h5>Cliente Uno</h5>
+                                    <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi rerum ratione ad, eaque doloremque ut dolorem hic consequatur placeat rem quis possimus nisi dolores saepe iusto tempora harum tenetur et?</blockquote>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonios"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonios"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </section>
         </main>
+
         <!-- Footer-->
         <footer class="footer bg-dark text-white pt-2 mt-5">
             <div class="container">
