--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     <img src="public/testimonio-b.jpg" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="item-txt">
-                                    <h5>Cliente Uno</h5>
+                                    <h5>Cliente Dos</h5>
                                     <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi rerum ratione ad, eaque doloremque ut dolorem hic consequatur placeat rem quis possimus nisi dolores saepe iusto tempora harum tenetur et?</blockquote>
                                 </div>
                             </div>
@@ -161,7 +161,7 @@
                                     <img src="public/testimonio-c.jpg" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="item-txt">
-                                    <h5>Cliente Uno</h5>
+                                    <h5>Cliente Tres</h5>
                                     <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi rerum ratione ad, eaque doloremque ut dolorem hic consequatur placeat rem quis possimus nisi dolores saepe iusto tempora harum tenetur et?</blockquote>
                                 </div>
                             </div>
